<resources>
    <string name="app_name">AppChange</string>
    <string name="change">Intercambia</string>
    <string name="check_in">Registrarse</string>texto
    <string name="create_account">Crea tu cuenta</string>
    <string name="email">Correo electrónico</string>
    <string name="email_is">Su correo es:</string>
    <string name="email_used">Ya existe una cuenta con ese correo</string>
    <string name="enter_valid_email">Ingrese un correo electrónico valido</string>
    <string name="enter_valid_name">Ingrese su nombre y apellido (mínimo 6 letras)</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="favorites">Favoritos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Inicio</string>
    <string name="login">Iniciar sesión</string>
    <string name="login_message">Ingresa tus datos o crea una cuenta para compartir con la comunidad de AppChange.</string>
    <string name="logout">Cerrar sesión</string>
    <string name="missing_data">"Algún campo está vacío"</string>
    <string name="name">Nombre completo</string>
    <string name="password">Contraseña</string>
    <string name="password_length">"Debe tener mínimo 6 caracteres"</string>
    <string name="password_not_match">Las contraseñas no coinciden</string>
    <string name="question_dont_have_account">¿No tienes cuenta?</string>
    <string name="register"><u>Regístrate</u></string>
    <string name="rep_password">Repita la contraseña</string>
    <string name="required_field">*Campo requerido</string>
    <string name="text_example_card_view">Este producto es…, y es así…</string>
    <string name="title_activity_practica3">MainActivity</string>
    <string name="title_change">Intercambia</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_favorites">Favoritos</string>
    <string name="title_home">Incio</string>
    <string name="title_messages">Mensajes</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Perfil</string>
    <string name="warning_login_incorrect_field">Correo electrónico o contraseña incorrectos</string>
    <string name="warning_login_empty">Algún campo está vacío</string>
    <string name="welcome">Bienvenido</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="add_products">+ Agregar fotos</string>
    <string name="title">Título</string>
    <string name="description">Descripción del producto</string>
    <string name="ubication">Ubicación</string>
    <string name="state_product">Estado del producto:</string>
    <string name="categories">Categorías</string>
    <string name="add_product">Agregar producto</string>
    <string name="categorie_example">Categorìa</string>
    <string name="missing_picture">"Ingresa una imagen del producto"</string>
    <string name="my_profile">Mi perfil</string>
    <string name="plus">+</string>
    <string name="title_change_information">Cambia tu información</string>
    <string name="number">Número de contacto</string>
    <string name="address">Dirección</string>
    <string name="city">Ciudad</string>
    <string name="save">Guardar</string>
    <string name="alert_delete_product">"¿Está seguro que desea eliminar este producto?"</string>
    <string name="accept">Aceptar</string>
    <string name="title_delete">Eliminar producto</string>
    <string name="cancel">Cancelar</string>
    <string name="update">Actualizar</string>
    <string name="preferences">Interesado en</string>

    <string name="descriptionConc">Descripción : %s</string>
    <string name="conditionConc">Condición : %s</string>
    <string name="preferencesConc">Preferencias : %s</string>
    <string name="categoriesConc">Categorias : %s</string>
    <string name="delete">x</string>
    <string name="search_in_appchange">Busca en AppChange</string>
    <string name="title_change_password">Cambia tu contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="incorrect_password">Contraseña incorrecta</string>
    <string name="password_updated">Contraseña actualizada</string>
    <string name="password_not_updated">No se pudo actualizar la contraseña</string>
    <string name="message">Mensaje</string>
    <string name="head_change">Hola, te interesa cambiar tu</string>
    <string name="product">Producto</string>
    <string name="for_change">por mi:</string>
    <string name="my_products">Mis Productos</string>


</resources>
