<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/favorites"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_change"
        android:icon="@drawable/change"
        android:title="@string/title_change" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/messeges"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />

</menu>