<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_login"
    android:backgroundTint="@color/color_app"
    android:backgroundTintMode="screen">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".RegisterActivity">

            <TextView
                android:id="@+id/create_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/create_account"
                android:textColor="@color/teal_700"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#4A000000"
                app:boxStrokeColor="#000000"
                app:helperText="@string/required_field"
                app:helperTextTextColor="#4A000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:hint="@string/name"
                    android:inputType="text"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColorHint="#4A000000"
                app:boxStrokeColor="#000000"
                app:helperText="@string/required_field"
                app:helperTextTextColor="#4A000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColorHint="#4A000000"
                app:boxStrokeColor="#000000"
                app:endIconMode="password_toggle"
                app:endIconTint="#4A000000"
                app:helperText="@string/required_field"
                app:helperTextTextColor="#4A000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rep_password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColorHint="#4A000000"
                app:boxStrokeColor="#000000"
                app:endIconMode="password_toggle"
                app:endIconTint="#4A000000"
                app:helperText="@string/required_field"
                app:helperTextTextColor="#4A000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rep_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:hint="@string/rep_password"
                    android:inputType="textPassword"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/checkin_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:background="@drawable/round_button"
                android:text="@string/check_in"
                android:textAllCaps="false"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
