<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments_main.change.ChangeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/add_product_image_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_camera"
                tools:ignore="ContentDescription" />

            <Button
                android:id="@+id/add_pictures_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/round_button"
                android:text="@string/add_products"
                android:textAllCaps="false"
                android:textSize="14sp"
                tools:ignore="TextContrastCheck" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_product_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black"
                app:counterTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_product_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/title"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descrption_product_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black"
                app:counterTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_product_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ubcation_product_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/black"
                app:counterTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ubication_product_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ubication"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/state_product_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/state_product"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/state_spinner"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:entries="@array/state_list"
                android:scrollbarSize="16dp" />

            <TextView
                android:id="@+id/categories_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/categories"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/add_product_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/round_button"
                android:text="@string/add_product"
                android:textAllCaps="false"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>