<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments_main.profile.UpdateInfoFragment" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/ic_clear">

        <TextView
            android:id="@+id/title_text_view"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_change_information"
            android:textColor="@color/color_app" />
    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/color_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/edit_profile_image_view"
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/profile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/add_picture_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="100dp"
                    android:layout_weight="0"
                    android:background="@drawable/round_button"
                    android:text="@string/plus"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/edit_profile_image_view"
                    app:layout_constraintTop_toTopOf="@+id/edit_profile_image_view"
                    tools:ignore="InefficientWeight,TextContrastCheck,TouchTargetSizeCheck" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:textColorHint="#4A000000"
                app:boxStrokeColor="#000000"
                app:helperText="@string/required_field"
                app:helperTextTextColor="#4A000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:hint="@string/name"
                    android:inputType="text"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:textColorHint="#4A000000"
                app:boxStrokeColor="#000000"
                app:helperText="@string/required_field"
                app:helperTextTextColor="#4A000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColorHint="#4A000000"
                app:boxStrokeColor="#000000"
                app:helperText="@string/required_field"
                app:helperTextTextColor="#4A000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="#FFFFFF"
                    android:hint="@string/number"
                    android:inputType="phone"
                    android:textAlignment="viewStart"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:textColorHint="#4A000000"
                app:boxStrokeColor="#000000"
                app:helperText="@string/required_field"
                app:helperTextTextColor="#4A000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:hint="@string/address"
                    android:inputType="text"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/city_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:textColorHint="#4A000000"
                app:boxStrokeColor="#000000"
                app:helperText="@string/required_field"
                app:helperTextTextColor="#4A000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/city_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:hint="@string/city"
                    android:inputType="text"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/round_button"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textSize="16sp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>