<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments_main.profile.ChangePasswordFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/ic_clear">

        <TextView
            android:id="@+id/title_text_view"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_change_password"
            android:textColor="@color/color_app" />
    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/color_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/old_password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:textColorHint="#4A000000"
                app:boxStrokeColor="#000000"
                app:endIconMode="password_toggle"
                app:helperTextTextColor="#4A000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/old_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAlignment="viewStart"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:textColorHint="#4A000000"
                app:boxStrokeColor="#000000"
                app:endIconMode="password_toggle"
                app:helperTextTextColor="#4A000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:textColorHint="#4A000000"
                app:boxStrokeColor="#000000"
                app:endIconMode="password_toggle"
                app:helperTextTextColor="#4A000000">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:hint="@string/rep_password"
                    android:inputType="textPassword"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/round_button"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>